--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,6 @@
-[credential "https://github.com"]
-	helper = 
-	helper = !/usr/bin/gh auth git-credential
 [user]
+	name = Jarni Olaerts
 	email = jarni.olaerts@gmail.com
-	name = jarnistoCodes
 [core]
 	editor = nano
 	excludesfile = ~/.gitignore
